<?xml version="1.0" encoding="utf-8"?>
<!--
    BSD 3-Clause License
    Copyright (c) Wojciech Kuźbiński <wojkuzb@mat.umk.pl>, Damian Gałkowski <galdam@mat.umk.pl>, Viacheslav Kushinir <kushnir@mat.umk.pl>, 2023

    See https://aleks-2.mat.umk.pl/pz2022/zesp10/#/project-info for see license text.
-->
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/switch_text_size"
            android:text="@string/aiSwitchDesc"
            android:visibility="gone" /> <!-- no AI :( -->

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/switch_text_size"
            android:text="@string/locationDisplaySwitchDesc" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/switch_text_size"
            android:text="@string/locationRecordingSwitchDesc" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/switch_text_size"
            android:text="@string/speedDisplaySwitchDesc" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/switch_text_size"
            android:text="@string/speedRecordingSwitchDesc" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/switch_text_size"
            android:text="@string/soundRecordingSwitchDesc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/row1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@id/spinner1"
                    android:text="@string/whereToSaveSwitchDesc"
                    android:textColor="@color/black"
                    android:textSize="@dimen/spinner_description_text_size"
                    tools:ignore="RtlHardcoded" />

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@android:drawable/btn_dropdown"
                    android:contentDescription="@string/locationRecordingSwitchDesc"
                    android:spinnerMode="dropdown" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/row2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@id/spinner2"
                    android:text="@string/menuPositionSpinnerDesc"
                    android:textColor="@color/black"
                    android:textSize="@dimen/spinner_description_text_size"
                    tools:ignore="RtlHardcoded"/>

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@android:drawable/btn_dropdown"
                    android:contentDescription="@string/menuPositionSpinnerDesc"
                    android:spinnerMode="dropdown" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/row3"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@id/spinner3"
                    android:text="@string/recordingLengthSpinnerDesc"
                    android:textColor="@color/black"
                    android:textSize="@dimen/spinner_description_text_size"
                    tools:ignore="RtlHardcoded"/>

                <Spinner
                    android:id="@+id/spinner3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@android:drawable/btn_dropdown"
                    android:contentDescription="@string/recordingLengthSpinnerDesc"
                    android:spinnerMode="dropdown" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/row4"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@id/spinner4"
                    android:text="@string/maxRecordingFolderSizeSpinnerDesc"
                    android:textColor="@color/black"
                    android:textSize="@dimen/spinner_description_text_size"
                    tools:ignore="RtlHardcoded" />

                <Spinner
                    android:id="@+id/spinner4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@android:drawable/btn_dropdown"
                    android:contentDescription="@string/maxRecordingFolderSizeSpinnerDesc"
                    android:spinnerMode="dropdown" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/row5"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@id/spinner5"
                    android:text="@string/emergencyCatalogueSizeSpinnerDesc"
                    android:textColor="@color/black"
                    android:textSize="@dimen/spinner_description_text_size"
                    tools:ignore="RtlHardcoded" />

                <Spinner
                    android:id="@+id/spinner5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@android:drawable/btn_dropdown"
                    android:contentDescription="@string/emergencyCatalogueSizeSpinnerDesc"
                    android:spinnerMode="dropdown" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/row6"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@id/spinner6"
                    android:text="@string/accelerationSpinnerDesc"
                    android:textColor="@color/black"
                    android:textSize="@dimen/spinner_description_text_size"
                    tools:ignore="RtlHardcoded" />

                <Spinner
                    android:id="@+id/spinner6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@android:drawable/btn_dropdown"
                    android:contentDescription="@string/accelerationSpinnerDesc"
                    android:spinnerMode="dropdown" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/row7"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@id/spinner7"
                    android:text="@string/minSpeedSpinnerDesc"
                    android:textColor="@color/black"
                    android:textSize="@dimen/spinner_description_text_size"
                    tools:ignore="RtlHardcoded" />

                <Spinner
                    android:id="@+id/spinner7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@android:drawable/btn_dropdown"
                    android:contentDescription="@string/minSpeedSpinnerDesc"
                    android:spinnerMode="dropdown" />

            </RelativeLayout>


        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>

